[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/pausebutton.png" type="Texture" id=2]
[ext_resource path="res://scripts/touchpadv2.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/roundButton_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/touchpad_bg.png" type="Texture" id=5]
[ext_resource path="res://scripts/attackpadv2.gd" type="Script" id=6]
[ext_resource path="res://scenes/InventorySystem.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 150.0

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.119565
margin_top = -2.27206
margin_right = -0.119568
margin_bottom = -2.27209
script = ExtResource( 1 )
playerNode = NodePath("")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="PauseButton" type="TextureButton" parent="CanvasLayer"]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 90.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/PauseButton"]
scale = Vector2( 5, 5 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )

[node name="debugLabel" type="Label" parent="CanvasLayer"]
editor/display_folded = true
margin_right = 96.0
margin_bottom = 57.0
text = "(149.880432, 447.727936)"

[node name="Timer" type="Timer" parent="CanvasLayer/debugLabel"]
wait_time = 4096.0
autostart = true

[node name="moveButton" type="TouchScreenButton" parent="CanvasLayer"]
editor/display_folded = true
position = Vector2( 149.88, 447.728 )
shape = SubResource( 1 )
script = ExtResource( 3 )

[node name="buttonSprite" type="Sprite" parent="CanvasLayer/moveButton"]
visible = false
scale = Vector2( 5, 5 )
z_index = 1
texture = ExtResource( 4 )

[node name="background" type="Sprite" parent="CanvasLayer/moveButton"]
visible = false
texture = ExtResource( 5 )

[node name="shootButton" type="TouchScreenButton" parent="CanvasLayer"]
editor/display_folded = true
position = Vector2( 873.88, 447.728 )
shape = SubResource( 1 )
script = ExtResource( 6 )

[node name="buttonSprite" type="Sprite" parent="CanvasLayer/shootButton"]
visible = false
scale = Vector2( 5, 5 )
z_index = 1
texture = ExtResource( 4 )

[node name="background" type="Sprite" parent="CanvasLayer/shootButton"]
visible = false
texture = ExtResource( 5 )

[node name="inventorySystem" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="CanvasLayer/PauseButton/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
